# extract-ets-ui

./: README.md  package.json  pnpm-lock.yaml
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/templates/senior/: CommonPaper.html
