[package]
name = "extract-ets-ui"
version = "5.7.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "extract_ets_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "^1.0.89"
extract-ets-lib = { git = "https://github.com/zhang090210/extract-ets-lib", tag = "v5.7.1.3" }
tauri-plugin-dialog = "2.0.0-rc"
tempfile = "^3.13.0"
webbrowser = "^1.0.2"
